--- a/profile/profile.html
+++ b/profile/profile.html
@@ -11,12 +11,13 @@
   <div class="profile">使用できる言語<br>
   </div>
       <ul>
-        <li>HTML&CSS</li>
-        <li>Javascript</li>
-        <li>PHP</li>
-        <li>Ruby</li>
+        <li>HTML&CSS（駆け出し中）</li>
+        <li>Javascript（ど素人）</li>
+        <li>PHP（触っただけ）</li>
+        <li>Ruby（見ただけ）</li>
+        <li>日本語（不自由）</li>
       </ul>
-      <p>みたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたいみたいな事を書きたい</p>
+      
       <p><a href="../index.html">TOPへ</p>
 </body>
 </html>
