--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>T-T Portforio</title>
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://kit.fontawesome.com/53e3131bc0.js"></script>
